--- a/styles/blog.css
+++ b/styles/blog.css
@@ -11,6 +11,7 @@ header{
     display: flex;
     flex-direction: column;
     gap: var(--margin);
+    margin-block-end: calc(2*var(--margin));
 }
 
 .article-details{
@@ -60,13 +61,32 @@ footer{
     display: flex;
     flex-direction: column;
     gap: var(--margin);
-    padding-block-end: var(--margin);
 }
 
 .next-article-title{
     display: flex;
     flex-direction: column;
 }
+
+button{
+    align-items: end;
+    width: clamp(90px, 115px, 120px);
+    border: 0;
+    padding: calc(var(--margin)/2);
+    background-color: rgb(228, 228, 228);
+    border-radius: 4px;
+    transition: background-color 100ms linear;
+    transition: border-radius 100ms linear;
+
+}
+
+button:hover{
+    background-color: rgb(217, 255, 0);
+    border-radius: 16px;
+    transition: background-color 100ms linear;
+    transition: border-radius 100ms linear;
+}
+
 
 .next-hero-image{
     aspect-ratio: 16 / 9;
@@ -98,6 +118,10 @@ footer{
         padding-block-end: var(--margin);
     }
 
+    figure{
+        grid-column: 1/5;
+    }
+
     .grid-1{
         grid-column: 1/2;
     }
@@ -121,6 +145,7 @@ footer{
         padding-block: var(--margin);
     }
 
+
     .hero-image{
         aspect-ratio: 16 /9;
     }
@@ -139,6 +164,12 @@ footer{
 
     .content{
         grid-column: 3/5;
+    }
+
+
+    figure{
+        grid-column: 2/5;
+        margin-block: calc(var(--margin)*3);
     }
 
     .grid-1{
