--- a/styles/blog-typography.css
+++ b/styles/blog-typography.css
@@ -65,3 +65,25 @@ blockquote{
 .next-article-title > h1{
     font-size: var(--blog-subhead-size);
 }
+
+.share{
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 1.2rem;
+}
+
+@media (min-width: 600px) and (max-width:900px) {
+    .article-title h1,
+    .article-title h2{
+        font-size: 5rem;
+        line-height: 4.5rem;
+    }
+}
+
+@media (min-width:901px) {
+    .article-title h1,
+    .article-title h2{
+        font-size: 8rem;
+        line-height: 7.7rem;
+    }
+}
