--- a/styles/blog.css
+++ b/styles/blog.css
@@ -93,6 +93,10 @@ button:hover{
     padding-block-end: var(--margin);
 }
 
+footer{
+    background-color: white;
+}
+
 
 @media (min-width: 600px) and (max-width:900px) {
     .container{
@@ -103,6 +107,7 @@ button:hover{
         aspect-ratio: 16 /9;
     }
 
+    .bio,
     article{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
